# ENGG11

./: exp-data.csv  pyproject.toml
results/: Adam-model.pt  Adam-speeds.hkl  Adam-studies.hkl  GA-and-Adam-model.pt  GA-and-Adam-speeds.hkl  GA-model.pt  GA-speeds.hkl  GA-studies.hkl
src/: pinn-optimization.ipynb  plots.py  utils.py
src/lib/: BaseModel.py  optuna.py  physics.py  plots.py  test_speed.py  utils.py
