[project]
name = "neural-networks"
version = "0.1.0"
authors = [ {name = "Silas Henrique", email = "silash35@gmail.com"}, ]
requires-python = ">=3.13, <3.14"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "torch>=2.4.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true
