[project]
name = "neural-networks"
version = "0.1.0"
authors = [ {name = "Silas Henrique", email = "silash35@gmail.com"}, ]
requires-python = "==3.13.1"
dependencies = [
    "hickle>=5.0.3",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
    "optuna>=4.1.0",
    "pygad>=3.4.0",
    "scipy>=1.14.1",
    "seaborn>=0.13.2",
    "torch>=2.5.1",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
docstring-code-format = true
